--- a/packages/deft/package.json
+++ b/packages/deft/package.json
@@ -1,7 +1,8 @@
 {
     "name": "deft",
     "type": "code",
-    "creator": "Deft JS",
+    "creator": "Alessandro Siragusa",
+    "owner": "Deft JS",
     "summary": "Extensions for Large-Scale Sencha Touch and Ext JS Applications",
     "detailedDescription": "Deft JS extends Sencha Touch and Ext JS to add an Inversion of Control (IoC) container, for dependency injection and dynamic application assembly; an alternative MVC implementation, for per-view-instance ViewControllers; and a Promises/A+ compliant implementation of Promises and Deferreds, for simplified coordination, aggregation and transformation of asynchronous operations and their resulting values.",
     "version": "0.9.1",
